# arch-delta-upgrades

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
async_file_cache/: Cargo.toml  README.md
async_file_cache/src/: lib.rs
client/: Cargo.toml  README.md  deltaclient.service  deltaclient.timer
client/src/: main.rs  util.rs
common/: Cargo.toml
common/src/: dl.rs  fs.rs  lib.rs  parsing.rs
parsing/: Cargo.toml
parsing/src/: lib.rs
ruma-headers/: Cargo.toml  README.md
ruma-headers/src/: http_headers.rs  lib.rs
server/: Cargo.toml  README.md
server/src/: cache.rs  caches.rs  lib.rs  main.rs  parsing.rs
