[workspace]
members = ["client", "server", "parsing", "async_file_cache", "ruma-headers"]
resolver = "2"



[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.release]
lto="fat"
debug=1

[patch.crates-io]
ddelta = { git = "https://github.com/djugei/ddelta-rs" }
indicatif = { git = "https://github.com/djugei/indicatif", branch = "heuristic" }
hashbrown = { git = "https://github.com/djugei/hashbrown" }
