[workspace]
members = ["client", "server", "common", "async_file_cache", "ruma-headers"]
resolver = "2"

[workspace.lints.clippy]
clone-on-ref-ptr = "warn"
join-absolute-paths = "warn"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.release]
lto="fat"
debug=1

[patch.crates-io]
ddelta = { git = "https://github.com/djugei/ddelta-rs" }
libalpm-rs = { git = "https://github.com/djugei/libalpm-rs" }
env_logger = { git = "https://github.com/djugei/env_logger" }
