[package]
name = "deltaproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddelta = "*"
zstd = { version = "*", features = ["zstdmt"] }
indicatif ="*"
reqwest = { version = "*", default-features = false, features = ["rustls-tls", "blocking"]}
http = "*"
clap = { version = "*", features = ["derive"] }
itertools = "*"
log = "*"
pretty_env_logger = "*"
parsing = {path = "../parsing"}
