[package]
name = "deltaclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddelta = "*"
zstd = { version = "*", features = ["zstdmt", "experimental"] }
indicatif = ">=0.17.0"
reqwest = { version = "*", default-features = false, features = ["rustls-tls"]}
http = "*"
clap = { version = "*", features = ["derive"] }
itertools = "*"
log = "*"
env_logger = "*"
parsing = {path = "../parsing"}
tokio = {version = "*", features = ["fs", "rt", "macros", "rt-multi-thread", "sync"]}
indicatif-log-bridge = "*"
anyhow = "*"
memmap2 = "*"
bytesize = "1.3.0"

[[bin]]
name = "deltaclient"

[features]
default = ["diff"]
diff = []
