[package]
name = "deltaclient"
version = "0.5.0"
edition = "2024"
authors = ["djugei"]
license = "AGPL-3.0-or-later"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddelta = "*"
zstd = { version = "*", features = ["zstdmt", "experimental"] }
indicatif = { version = ">=0.17.0", features = ["tokio"] }
reqwest = { version = "*", default-features = false, features = ["rustls-tls"]}
http = "*"
clap = { version = "*", features = ["derive"] }
itertools = "*"
log = "*"
env_logger = "*"
common = {path = "../common"}
tokio = {version = "*", features = ["fs", "rt", "macros", "rt-multi-thread", "sync"]}
indicatif-log-bridge = "*"
anyhow = "*"
memmap2 = "*"
bytesize = "*"
strsim = "0.11"
dialoguer = "*"
command-rusage = "1.0.1"
ruma-headers = {path = "../ruma-headers"}
flate2 = { version = "*" }
libalpm-rs = "*"
memory-stats = { version = "*", optional = true }

[[bin]]
name = "deltaclient"

[features]
default = ["diff"]
diff = ["dep:memory-stats"]
