[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["djugei"]
license = "LGPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"

reqwest = "0.13"
tokio = { version = "*", features = ["sync"] }
indicatif = "0.18.4"

[dev-dependencies]
tokio = { version = "*", features = ["rt", "fs", "sync", "rt-multi-thread"] }
