[package]
name = "deltaserver"
version = "0.1.0"
edition = "2021"
authors = ["djugei"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
anyhow = "*"

tracing = "*"
tracing-subscriber = "0.3.18"

tokio = { version = "*", features = ["rt", "sync", "fs", "io-util", "macros", "tracing", "time", "signal"] }
tokio-util = { version = "*", features = ["io"] }
futures-util = "*"

listenfd = "*"

axum =  { version = "*", features = [] }
reqwest = { version = "*", default-features = false, features = ["rustls-tls"]}
axum-range = "*"
axum-extra = "*"

ddelta = "*"
zstd = { version = "*", features = ["zstdmt"] }
flate2 = { version = "*" }
strsim = "*"

parsing = {path = "../parsing"}
async_file_cache = {path = "../async_file_cache"}
