[package]
name = "deltaserver"
version = "0.1.0"
edition = "2021"
authors = ["djugei"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
anyhow = "*"

tracing = "*"
tracing-subscriber = "0.3.18"

tokio = { version = "*", features = ["rt", "sync", "fs", "io-util", "macros", "tracing", "time", "signal"] }
tokio-util = { version = "*", features = ["io"] }
futures-util = "*"

listenfd = "*"

axum =  { version = "*", features = [] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"]}
axum-range = "*"
axum-extra = { version = "*", features = ["typed-header"] }

ddelta = "*"
zstd = { version = "*", features = ["zstdmt"] }
flate2 = { version = "*" }
strsim = "*"

common = {path = "../common"}
async_file_cache = {path = "../async_file_cache"}
